--- a/CANDY_CRUSH/style.css
+++ b/CANDY_CRUSH/style.css
@@ -1,42 +1,36 @@
 .grid {
-    height: 560px;
-    min-width: 560px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 80px;
-    margin-top: 50px;
-    background-color: rgba(109, 127, 151, 0.5);
-    padding:5px;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-    color: #85796b;
-}
+  height: 560px;
+  min-width: 560px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 80px;
+  margin-top: 50px;
+  background-color: rgba(109, 127, 151, 0.5);
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
+  color: #85796b; }
 
 .grid div {
-    height: 70px;
-    width: 70px;
-}
+  height: 70px;
+  width: 70px; }
 
 h3 {
- font-family: "Montserrat", sans-serif;
- text-transform: uppercase;
-}
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase; }
 
 h1 {
- font-family: "Montserrat", sans-serif;
- text-transform: uppercase;
- margin-top: -10px;
-}
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  margin-top: -10px; }
 
 .invisible {
-    background-color: white;
-}
+  background-color: white; }
 
 body {
   background-image: url("candy-crush-background-2.png");
   max-width: 100vh;
-  display: flex;
-}
+  display: flex; }
 
 .score-board {
   background-color: pink;
@@ -45,7 +39,6 @@ body {
   margin-left: 200px;
   margin-bottom: 350px;
   min-width: 200px;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -53,5 +46,6 @@ body {
   text-align: center;
   background-image: linear-gradient(#FFB6C1, #FFC0CB);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-  color: #85796b;
-}
+  color: #85796b; }
+
+/*# sourceMappingURL=style.css.map */
